# adl-lite

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANCHOR.md  CHANGELOG.md  Dockerfile  LICENSE  PRD_F25_Neo4j_Adapter.md  README.md  REPRODUCIBILITY.md  adl_consensus.json  pyproject.toml  reproduce.sh  state.json  test-results-after.xml  test-results-final.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  compliance-ready.yml
.workbuddy/memory/: 2026-05-30.md  2026-05-31.md
adl_lite/: __init__.py  action_executor.py  adl_core_ontology.yaml  api.py  api_auth.py  attestation.py  calibration.py  canonicalization.py  challenge.py  cli.py  cold_storage.py  config.py  consensus.py  crdt.py  data_importer.py  did_resolver.py  embeddings.py  exceptions.py  execution_log.py  graph_backends.py  jsonld_export.py  key_registry.py  l2_template.py  ld_proof.py  logging_config.py  mcp_server.py  memory.py  merkle.py  metering.py  models.py  near_duplicate.py  neo4j_adapter.py  ontology.py  owl_export.py  owl_import.py  parser.py  prov_export.py  quota.py  rdfstar_export.py  realtime.py  (+9 more)
adl_lite/fde/: __init__.py  agent_runner.py  pipeline_engine.py  rule_engine.py  tenant_manager.py
adl_lite/lark/: __init__.py  announce.py  client.py  dashboard.py  listen.py  namespace.py  publish.py  registry.py  sync_memory.py  templates.py
archive/docs/: DRAFT.md  FIGURES.md  HUMAN_RQ1_PROTOCOL.md  HUMAN_RQ1_QUESTIONNAIRE_ZH.md  OUTLINE.md  PHASE1_CHECKLIST.md  PHASE_B_PLAN.md  RELATED_WORK.md  RELEASE_v0.3.2.md  RELEASE_v0.3.3.md  RELEASE_v0.4.0.md  RESEARCH_LOOP_CHECKLIST.md  RESULTS.md  draft_abstract.md  draft_evaluation.md  draft_introduction.md  (+6 more)
artifacts/: attention_residual_discovery.ttl  attention_residual_discovery_rdfstar.ttl  capital_reflux_trap.ttl  capital_reflux_trap_rdfstar.ttl  gradient_explosion.ttl  gradient_explosion_rdfstar.ttl  matdo_fork_kinetic.ttl  matdo_fork_kinetic_rdfstar.ttl  matdo_original.ttl  matdo_original_rdfstar.ttl  prov_export_report.json  rdfstar_export_report.json  shacl_validation_report.json  signature_artifact.json
case_study/: agent_profiles.json  event_log.json  expert_validation_framework.md  run_case_study.py  summary_statistics.json
dashboard/: .env.example  .eslintrc.cjs  QA_ROUND2_REPORT.md  index.html  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/: AGENT_WORKFLOW.md  CODE_REVIEW_STANDARDS.md  CRDT_MIGRATION_GUIDE.md  DATASET_GUIDE.md  IMPLEMENTATION_PLAN.md  OWL2_DL_ROBOT_VALIDATION_REPORT.md  PAPER_SUBMISSION_PLAN.md  PRD.md  RELEASE_v0.3.0.md  RELEASE_v0.3.1.md  RESEARCH_STATEMENT.md  REVIEWER2_RESPONSE.md  REVIEWER_RESPONSE.md  REVIEWER_RESPONSE_MR3.md  REVIEW_RESPONSE_PLAN.md  SPEC.md  WORKFLOW_OPTIMIZATION.md  class-diagram.mermaid  ontology.md  phase2_class-diagram.mermaid  phase2_prd_multitenant_metering.md  phase2_r12_class-diagram.mermaid  phase2_r12_quota_design.md  phase2_r12_sequence-diagram.mermaid  phase2_sequence-diagram.mermaid  phase2_system_design.md  phase3_evaluation.md  reviewer_tracking_status.json  sequence-diagram.mermaid  system_design.md  verification_status.md
examples/: attention_residual_discovery.md  capital_reflux_trap.md  crdt_behavior_demo.py  gradient_explosion.md  matdo_fork_kinetic.md  matdo_original.md  weather_data_retrieval.md
experiments/: __init__.py  _synthetic_embeddings.py  base.py  benchmark_crdt_vs_lww.py  e10_fde_pipeline.py  e11_sideeffect_stress.py  e12_benchmark_comparison.py  e13_longchain_stress.py  e14_colluding_validators.py  e15_precondition_boundary.py  e16_multiagent_contention.py  e17_multi_agent_collab.py  e19_governance_benchmark.py  e1_chain_integrity.py  e20_template_effectiveness.py  e20b_calibration_baseline.py  e21_100k_stress.py  e23_contention_stress.py  e25_microbenchmark.py  e27_1m_event_scale.py  e28_10k_concurrency.py  e29_vector_index_recall.py  e2_status_derivation.py  e30_llm_normalization.py  e31_lazy_validator_detection.py  e32_evidence_weighted_confidence.py  e33_challenge_game.py  e34_precondition_formalization.py  e35_expert_validation_simulation.py  e3_snapshot_roundtrip.py  e4_precondition.py  e5_agent_audit.py  e5_literature_review.py  e6_aml_pipeline.py  e6b_multiagent_coordination.py  e7_realtime_watcher.py  e8_edge_sync.py  e9_git_baseline.py  embeddings.py  harness.py  (+21 more)
formal/coq/: .Makefile.coq.d  .lia.cache  ADVERSARIAL_REVIEW.md  Makefile  PROOFS.md  README.md  _CoqProject  adl_lite.opam  dune-project
formal/coq/iris/: concurrent_append.v  dune  event_chain_ra.v
formal/coq/theories/: CRDT.v  Chain.v  Confidence.v  Crypto.v  Event.v  Invariants.v  Status.v  dune
prompts/: judge_referent_clarity.md  kimi_swarm_paper.md  write_discovery.md  write_discovery_batch.md  write_discovery_plain.md
research_output/: research_state.json
scripts/: _qa_independent_verify.py  check_compliance_ready.py  check_redundancy.py  check_refs.py  check_table_overflow.py  check_theorems.py  consistency_check.py  demo_pipeline.py  demo_pipeline.sh  experiment_to_latex.py  mcp_adl.py  reviewer_tracker.py  run_tlc.py  validate_owl.sh
specs/: CRDTMerge.tla  ConsensusEngine.tla  EventChain.tla
tests/: __init__.py  conftest.py  test_E20b.py  test_E21.py  test_E23.py  test_action_executor.py  test_action_executor_extended.py  test_adversarial.py  test_adversarial_boundary.py  test_adversarial_extended.py  test_adversarial_integrity.py  test_aml_benchmark.py  test_aml_dataset.py  test_aml_production.py  test_anchor.py  test_api.py  test_api_auth.py  test_api_multitenant.py  test_api_scope_acl.py  test_archive.py  test_attestation.py  test_baseline_comparison.py  test_benchmarks.py  test_calibration.py  test_canonicalization.py  test_canonicalization_extended.py  test_challenge.py  test_cli.py  test_cli_extended.py  test_cli_internal.py  test_cli_neo4j.py  test_config.py  test_consensus_forks.py  test_crdt_adversarial.py  test_crdt_proofs.py  test_data_importer.py  test_demo_pipeline.py  test_did_integration.py  test_did_resolver.py  test_did_resolver_extended.py  (+69 more)
(+450 files in other folders)
