[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adl-lite"
version = "0.2.0"
description = "ADL Lite — Agent Discovery Language for Multi-Agent Concept Consensus"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CEIEC AI Infrastructure"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
adl-lite = "adl_lite.cli:main"

[project.urls]
Homepage = "https://github.com/sunnyang1/adl-lite"
Repository = "https://github.com/sunnyang1/adl-lite"
Documentation = "https://github.com/sunnyang1/adl-lite#readme"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
