[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adl-lite"
version = "0.2.0"
description = "ADL Lite — An Event-First Capability-Lifecycle Registry for LLM Agent Ecosystems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CEIEC AI Infrastructure"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    # === FDE Platform ===
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # HTTP client
    "httpx>=0.26.0",
    # Configuration
    "pydantic-settings>=2.1.0",
    # Task scheduling
    "apscheduler>=3.10.4",
    # LLM
    "openai>=1.0",
    "anthropic>=0.25",
    # WebSocket
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0",
    "httpx>=0.26.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "rdflib>=7.0",
    "pyshacl>=0.25",
]
experiments = [
    "openai>=1.0",
    "anthropic>=0.25",
]
experiments-embeddings = [
    "sentence-transformers>=2.2",
]
prod = [
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
]
v1 = [
    "redis>=5.0",
    "celery>=5.3",
]

[project.scripts]
adl-lite = "adl_lite.cli:main"

[project.urls]
Homepage = "https://github.com/sunnyang1/adl-lite"
Repository = "https://github.com/sunnyang1/adl-lite"
Documentation = "https://github.com/sunnyang1/adl-lite#readme"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["archive/", "data/aml/scripts/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
